add_executable(lexer lexer.cpp)
target_link_libraries(lexer xscript-core)

add_executable(let let.cpp)
target_link_libraries(let xscript-core)

add_executable(set set.cpp)
target_link_libraries(set xscript-core)

add_executable(if if.cpp)
target_link_libraries(if xscript-core)

#add_executable(list list.cpp)
#target_link_libraries(list xscript-core)

#add_executable(dict dict.cpp)
#target_link_libraries(dict xscript-core)

#add_executable(arithmetic arithmetic.cpp)
#target_link_libraries(arithmetic xscript-core)

#add_executable(print print.cpp)
#target_link_libraries(print xscript-core)

#add_executable(let let.cpp)
#target_link_libraries(let xscript-core)

#add_executable(set set.cpp)
#target_link_libraries(set xscript-core)

#add_executable(if if.cpp)
#target_link_libraries(if xscript-core)

#add_executable(if-else if-else.cpp)
#target_link_libraries(if-else xscript-core)

#add_executable(ifelse ifelse.cpp)
#target_link_libraries(ifelse xscript-core)

#add_executable(if-set if-set.cpp)
#target_link_libraries(if-set xscript-core)

#add_executable(while while.cpp)
#target_link_libraries(while xscript-core)
